# ARC

./: .gitignore  APP_LAUNCHING.md  ARC_CONNECT_FINAL.md  ARC_CONNECT_INTEGRATED.md  ARC_CONNECT_MINIMAL.md  ARC_CONNECT_SETUP.md  ARC_CONNECT_UPGRADED.md  ARC_CONNECT_UPGRADED_V2.md  AUTOSTART.md  CHECKLIST.md  CLEANUP_SUMMARY.md  CONFIG_UPDATED.md  DASHBOARD_LAYOUT.txt  FIX_ICONS_NOW.md  FIX_NOW.md  ICONS_FOLDER.md  IMPORT_FIX_SUMMARY.md  INSTALL.md  MUSIC_PLAYER_TROUBLESHOOTING.md  PI_ICON_FIX.md  QUICKSTART_CONNECT.md  QUICK_FIX.txt  QUICK_START.md  README.md  REORGANIZATION_SUMMARY.md  RPI_COMMANDS.md  RUN_APP_INSTRUCTIONS.md  SCRIPTS.md  SETUP.md  STRUCTURE.md  TROUBLESHOOTING.md  VERIFY_PI_FIX.md  apps.json  arc-launcher.desktop  arc-launcher.service  arc.yaml  config.py  connect.py  debug_icons.py  fix_audio.sh  (+21 more)
.github/: README.md
ARC_DE/: app_carousel.py  arc_status.py  bluetooth_menu.py  launcher.py  topbar.py  volume_widget.py  wifi_menu.py
ARC_connect/: connect_handler.py  ip.py
BT_tools/: main.py
Badusb/: main.py
Docs/: Importanta alegerii unui ideal in viata.docx
Games/: games.json  main.py
IR_tools/: main.py
Mail/: main.py
NFC_tools/: main.py
Notes_app/: main.py  notes.txt
RF_tools/: main.py
Settings/: main.py
Source Code/: ui_elements.py
WIFI_tools/: main.py
arc/: __init__.py
arc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
arc_menu/: app_list.py  bluetooth_menu.py  main.py  settings_menu.py  topbar.py  wifi_menu.py
calendar/: main.py
calendar_app/: main.py
config/: arc.yaml  (+1 more)
(+123 files in other folders)
