[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arc"
version = "0.1.0"
description = "ARC desktop"
authors = [
    { name="Istratie Stefan", email="istratie.stefan123@gmail.com" }
]
dependencies = [
    "numpy",
    "pygame",
"mutagen",
"pywebview",
"pyqtwebengine",
"pyqt5",
"qtpy",
"requests",
"pyaudio",
"qrcode",
"pillow",

]
requires-python = ">=3.7"

[project.scripts]
arc-launcher = "ARC_DE.launcher:main"

[tool.setuptools.packages.find]
include = ["ARC_DE*"]